--- a/build.gradle
+++ b/build.gradle
@@ -1,30 +1,13 @@
-plugins {	
-	id 'java'
-	id 'application'
-}
-
-mainClassName = 'com.ferick.alexander.PliantrespApplication'
-
-group = 'com.ferick.alexander'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '1.8'
-
-repositories {
-	mavenCentral()
-}
-
-jar {
-	manifest {
-		attributes 'Main-Class': "${mainClassName}"
-	}
-	from {
-		configurations.compile.collect {it.isDirectory() ? it : zipTree(it)}
+allprojects {
+	repositories {
+		mavenCentral()
 	}
 }
 
-dependencies {
-    compile "com.sparkjava:spark-core:2.8.0"
-	compile 'org.slf4j:slf4j-simple:1.7.21'
-	compile 'com.fasterxml.jackson.core:jackson-databind:2.9.9.2'
-	testCompile group: 'junit', name: 'junit', version: '4.12'
+subprojects {
+	apply plugin: 'java'
+	apply plugin: 'application'	
+
+	group = 'com.ferick.alexander'
+	sourceCompatibility = '1.8'
 }
