--- a/client/build.gradle
+++ b/client/build.gradle
@@ -2,5 +2,6 @@ description = 'client'
 version '0.0.1-SNAPSHOT'
 
 dependencies {
+    compile group: 'io.github.openfeign', name: 'feign-core', version: '10.3.0'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
