--- a/client/build.gradle
+++ b/client/build.gradle
@@ -3,5 +3,6 @@ version '0.0.1-SNAPSHOT'
 
 dependencies {
     compile group: 'io.github.openfeign', name: 'feign-core', version: '10.3.0'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.9.9.2'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
